log
Fri 14 Oct 2022 04:45:21 PM UTC: 
 tests:  0|4
total_score: 0/70
19bff1a
Fri 14 Oct 2022 04:51:52 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:16: error: unused variable ‘array’ [-Werror=unused-variable]
   42 |     heapElem * array = (heapElem*)calloc(3,sizeof(heapElem)) ;
      |                ^~~~~
cc1: all warnings being treated as errors
Compilation failed
72e0642
Fri 14 Oct 2022 04:52:19 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
3ea39d2
Fri 14 Oct 2022 04:58:50 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:23: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   23 |     heapElem * dato = pq->heapArray[0];
      |                       ^~
Compilation failed
9a9aae5
